异步接口调整